# youtube

./: .env.example  .gitignore  .replit  Dockerfile  PHASE_2_SUMMARY.md  PROJECT.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  README.md  app.py  docker-compose.yml  instagram_session.json  logs.gitkeep  main.py  performance_optimizations.md  project_structure.md  pyproject.toml  replit.md  requirements.txt  setup.sh  user_experience_improvements.md
.local/state/replit/agent/filesystem/: filesystem_state.json
config/: __init__.py  settings.py
core/: __init__.py  bot.py  config.py  telethon_client.py
core/bot/: __init__.py  handlers.py  keyboards.py  telegram_bot.py
core/database/: __init__.py  manager.py  models.py
core/downloader/: __init__.py  manager.py  progress.py  yt_dlp_wrapper.py
core/uploader/: __init__.py  manager.py
core/userbot/: __init__.py  handlers.py  telethon_userbot.py
database/: __init__.py  connection.py  models.py
docs/: ux_improvements.md
handlers/: __init__.py  callbacks.py  commands.py  messages.py
init-scripts/: 01-init-db.sql
middlewares/: __init__.py  auth.py  rate_limit.py
services/: __init__.py  cache_manager.py  downloader.py  file_manager.py  progress_tracker.py
static/: __init__.py  icons.py
utils/: __init__.py  cache_helpers.py  file_utils.py  formatters.py  helpers.py  progress_animations.py  validators.py
web/api/: auth.py  main.py
yt_telethon_userbot/: .env.example  .gitignore  Dockerfile  README.md  main.py  requirements.txt
